--- a/notes-frontend/package.json
+++ b/notes-frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@fortawesome/angular-fontawesome": "^0.8.1",
     "bulma": "^0.9.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
